# ddg-proxy

./: Cargo.toml  Procfile  bangs
.github/workflows/: publish.yml
src/: main.rs
templates/: gruvbox.css  index.hbs  index.html.hbs  tokyonight.css
