[package]
name = "rust-startpage"
version = "0.1.0"
authors = ["allmeta <thomasdasd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="*"
scraper="*"
ureq="*"
serde = {version = "*", features=["derive"]}
urlencoding = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","handlebars_templates"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
