[package]
name = "rust-startpage"
version = "0.1.0"
authors = ["allmeta <thomasdasd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.9"
scraper="0.12.0"
ureq="2.1.1"
serde = {version = "1.0.126", features=["derive"]}
urlencoding = "1.3.3"
url = "2.2.2"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.9"
default-features = false
features = ["json","handlebars_templates"]

[profile.release]
lto = true
