[package]
name = "ddg-proxy"
version = "0.1.0"
authors = ["allmeta <thomasdasd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
scraper="0.12.0"
ureq="2.1.1"
serde = {version = "1.0.126", features=["derive"]}
urlencoding = "1.3.3"
url = "2.2.2"
lazy_static = "1.4.0"
either = "1.5.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[profile.release]
lto = true
